added remove of iPhone

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                            <button id = "iphonePlus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$ <span id = "currentIphonePrice">1219</span></h5>
-                        <img src="images/remove.png" alt="" class="remove-item">
+                        <img id = "removeIphoneBtn" src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
@@ -50,7 +50,7 @@
 
                         </div>
                         <h5>$ <span id = "currentCasePrice">59</span></h5>
-                        <img src="images/remove.png" alt="" class="remove-item">
+                        <img id = "caseRemoveBtn" src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
