added remove case from cart

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                         </div>
                         <h5>$ <span id = "currentCasePrice">59</span></h5>
-                        <img id = "caseRemoveBtn" src="images/remove.png" alt="" class="remove-item">
+                        <img id = "removeCaseBtn" src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
